# tech4Impact_DATA

./: .bentoignore  .gitignore  bentofile.yaml  main.py  model_loader.py  pyproject.toml  requirements.txt  service.py  setup.sh  utils.py
