[project]
name = "qwen-service"
version = "0.1.0"
description = "Qwen3-VL-32B model service with BentoML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.30",
    "transformers>=4.37.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "accelerate>=0.25.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "qwen-vl-utils>=0.0.1",
    "fastapi>=0.104.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
